chore: fix spacing issue

--- a/packages/discord-user-card/src/styles/other.scss
+++ b/packages/discord-user-card/src/styles/other.scss
@@ -232,7 +232,7 @@
 	font-size: 14px;
 	line-height: 18px;
 	font-weight: 500;
-	display: block;
+	display: flex;
 	overflow: hidden;
 	white-space: nowrap;
 }
